<resources>
    <string name="app_name">Mortgage Calculator By Jasmine Lao</string>
    <string name="prompt">Enter Principle ($)</string>
    <string name="interest_rate_10_0">Interest rate: 10.0%</string>
    <string name="include_taxes_and_insurance_0_1">Include taxes and insurance (0.1%)</string>
    <string name="result">Monthly payment: $%.2f.</string>
    <string name="uninstall">Uninstall</string>
    <string name="calculate">Calculate</string>
    <string name="select_loan_term">Select Loan Term</string>
    <string name="_15_years">15 years</string>
    <string name="_20_years">20 years</string>
    <string name="_30_years">30 years</string>
    <string name="interest_rate">Interest Rate: %.1f%%</string>
</resources>